added title and icon and fixed text unreadable

--- a/style.css
+++ b/style.css
@@ -342,6 +342,9 @@ footer p {
     gap: 15rem;
     flex-wrap: wrap;
   }
+  .section-photos p {
+    font-size: 1rem;
+  }
 }
 
 @media screen and (max-width: 563px) {
